ffmpeg desktop cature

--- a/.gitignore
+++ b/.gitignore
@@ -64,3 +64,4 @@ share_screen/x64/Debug/share_screen.tlog/uic.write.1u.tlog
 .vs/share_screen/v17/ipch/AutoPCH/e20043fcfe23217/SCREEN.ipch
 deps/
 .vs/
+share_screen/x64/Debug/
